# pokedex-api

./: .env.sample  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
db/migrations/: env.py
db/migrations/versions/: 1df3912d7a30_create_pokemons_table.py  38146763dfbf_add_number_column_to_pokemons_table.py
pokedex/: app.py  config.py  logs.py  main.py  middlewares.py  providers.py  routers.py  settings.py  utils.py
pokedex/common/: dependencies.py  middlewares.py
pokedex/common/context/: manager.py
pokedex/common/database/: unit_of_work.py
pokedex/common/logs/: config.py  filters.py
pokedex/healthcheck/: api.py  repository.py  schemas.py  service.py
pokedex/healthcheck/docs/: examples.py  responses.py
pokedex/pokemon/: model.py
tests/: conftest.py  test_app.py  test_main.py  test_utils.py
tests/common/: test_middlewares.py
tests/common/context/: test_manager.py
tests/common/database/: test_base.py  test_unit_of_work.py
tests/fake/: api.py  routers.py
tests/healthcheck/: test_api.py  test_service.py
